# space-eaters

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: data.h  main.c  main.cpp  spritesheet.cpp  spritesheet.h
src/entity/: entity.c  entity.cpp  entity.h
src/entity/component/: collision.c  component.h  confetti.c  controller.c  controller.cpp  controller.h  gravity.c  gravity.cpp  gravity.h  particle.cpp  particle.h  render.c  render.cpp  render.h  sprite.c  sprite.cpp  sprite.h  swerve.c
src/scene/: game.c  menu.c  over.c  scene.c  scene.h
src/screen/: game.cpp  game.h  leaderboard.cpp  leaderboard.h  menu.cpp  menu.h  screen.cpp  screen.h
src/sprite/: sprite.cpp  sprite.h  spritesheet.c  spritesheet.cpp  spritesheet.h
